objects/PS_Group_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Carousel_Caption__c</fullName>
        <inlineHelpText>The header can be no more than 150 characters (including spaces)</inlineHelpText>
        <label>Header</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carousel_Description__c</fullName>
        <inlineHelpText>The sub-header can be no more than 250 characters (including spaces)</inlineHelpText>
        <label>Sub-Header</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Embed_Video__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embed Video</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Profiles__c</fullName>
        <label>Excluded Profiles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PS Knowledge Base Manager</fullName>
                </value>
                <value>
                    <fullName>PS Community Member</fullName>
                </value>
                <value>
                    <fullName>PS Community Moderator</fullName>
                </value>
                <value>
                    <fullName>PS Community Moderator Super User</fullName>
                </value>
                <value>
                    <fullName>PS User</fullName>
                </value>
                <value>
                    <fullName>PS Community Login User</fullName>
                </value>
                <value>
                    <fullName>PS System Administrator</fullName>
                </value>
                <value>
                    <fullName>Partner Community User</fullName>
                </value>
                <value>
                    <fullName>PS Partner Community Moderator Super User</fullName>
                </value>
                <value>
                    <fullName>Solution Manager</fullName>
                </value>
                <value>
                    <fullName>Solution Network Intermediaries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_URL__c</fullName>
        <inlineHelpText>URL must start with http://. If this a Video the url must be an EMBEDDED video link.</inlineHelpText>
        <label>External URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Carousel_Sort_Order__c</fullName>
        <inlineHelpText>The lower the value the earlier the slide shows up in the carousel</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Expired__c</fullName>
        <formula>IF( 
AND(!ISNULL(Expiration_Date__c),!ISNULL(Start_Date__c)), OR(TODAY() &gt; Expiration_Date__c, TODAY() &lt; Start_Date__c),
IF( AND(ISNULL(Expiration_Date__c),!ISNULL(Start_Date__c)), TODAY() &lt; Start_Date__c,
IF( AND(!ISNULL(Expiration_Date__c),ISNULL(Start_Date__c)), TODAY() &gt; Expiration_Date__c,
IF( AND(ISNULL(Expiration_Date__c),ISNULL(Start_Date__c)), false, false) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PS Group Record</label>
        <referenceTo>PS_Group__c</referenceTo>
        <relationshipLabel>Group Resources</relationshipLabel>
        <relationshipName>PS_Group_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Grouping_Name__c</fullName>
        <label>Resource Grouping Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slider_Url_c__c</fullName>
        <label>Slider Url</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>When a resource should start being shown on the community.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carousel Photo</fullName>
                </value>
                <value>
                    <fullName>Feature Carousel</fullName>
                </value>
                <value>
                    <fullName>Video Carousel</fullName>
                </value>
                <value>
                    <fullName>Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Video Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>PS Group Resource</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Carousel_Caption__c</columns>
        <columns>Caption__c</columns>
        <columns>Type__c</columns>
        <columns>Carousel_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Group Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Expiration_Dates_are_valid</fullName>
        <active>true</active>
        <description>Start Date cannot be after the Expiration Date.</description>
        <errorConditionFormula>Start_Date__c &gt; Expiration_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be after Expiration Date.</errorMessage>
    </validationRules>
</CustomObject>